# Economic-Simulation

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: flamegpu2.cmake
data/: vic3_catalog.json
docs/plans/: initial-plan.md
scripts/: benchmark.ps1  run_experiment.ps1
src/: main.cu
src/data/: catalog_env.cuh  constants.cuh  goods_catalog.cuh  region.cuh
src/domain/: capital_functions.cu  capital_functions.cuh  cell_functions.cu  credit_functions.cuh  inventory.cuh  marginal_utility.cuh  marginal_utility.h  movement_functions.cu  present_value.cuh  production_functions.cu  production_functions.cuh  trade_functions.cu  trade_functions.cuh
src/host/: seed_banks.cu  seed_grid.cu  step_advance_market.cu  step_banking.cu  step_log.cu  step_log.h  step_match_trades.cu
src/io/: catalog.h  catalog_loader.cu  config.cu  config.h  report_html.cu  report_html.h
src/model/: build_model.cu  build_model.h  model_symbols.cuh
src/model/agents/: consumer_functions.cu  producer_functions.cu
src/model/init/: seed_consumers.cu  seed_producers.cu
src/util/: math.cuh
tests/: run_unit_tests.ps1  test_marginal_utility.cpp
tests/smoke/: run_golden_run.ps1  run_sanity_checks.ps1  run_small_sim.ps1
